--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,5 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
 	compile("org.springframework.boot:spring-boot-starter-web")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile "org.mockito:mockito-core:1.+"
 }
